--- a/theme1/knowledgebase.html
+++ b/theme1/knowledgebase.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AdminLTE 3 | Dashboard</title>
+  <title>knowledgebase</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
@@ -46,13 +46,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="./home.html">Home</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="#">Submit Ticket</a>
+                <a class="nav-link" href="./submitticket.html">Submit Ticket</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                <a class="nav-link dropdown-toggle" href="./knowledgebase.html" id="navbarDropdown" role="button" data-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">Knowledge Base
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -66,7 +66,7 @@
                 <a class="nav-link" href="#">Billing </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">login </a>
+                <a class="nav-link" href="./category.html">login </a>
               </li>
             </ul>
           </div>
@@ -93,8 +93,8 @@
         <div class="content-header">
           <div class="breadcrumb-top">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">ChartJS</li>
+              <li class="breadcrumb-item"><a href="./home.html">Home</a></li>
+              <li class="breadcrumb-item active">knowledgebase</li>
             </ol>
           </div>
         </div>
