--- a/theme1/viewticket.html
+++ b/theme1/viewticket.html
@@ -33,7 +33,7 @@
   <link rel="stylesheet" href="../dist/css/loggedin.css">
   <!--MyTickets CSS-->
   <link rel="stylesheet" href="../dist/css/myticket.css">
-  <link rel="stylesheet" href="../dist/css/viewticket.css"
+  <link rel="stylesheet" href="../dist/css/viewticket.css">
 
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
